# PythonServices/Rest_api/swagger.yml
@@ -25,7 +25,7 @@ paths:
               properties:
                 order_id:
                   type: string
-                  description: Id of the person
+                  description: Id
                 latitude:
                   type: string
                   description: latitude
@@ -61,7 +61,7 @@ paths:
             properties:
               order_id:
                 type: string
-                description: Id of the person
+                description: Id
               latitude:
                 type: string
                 description: latitude
@@ -80,7 +80,7 @@ paths:
       parameters:
         - name: order_id
           in: path
-          description: Id of the person to get
+          description: Id to get
           type: integer
           required: True
       responses:
@@ -91,7 +91,7 @@ paths:
             properties:
               order_id:
                 type: string
-                description: Id of the person
+                description: Id
               latitude:
                 type: string
                 description: latitude
@@ -109,7 +109,7 @@ paths:
       parameters:
         - name: order_id
           in: path
-          description: Id the person to update
+          description: Id to update
           type: integer
           required: True
         - name: order
@@ -130,7 +130,7 @@ paths:
             properties:
               order_id:
                 type: string
-                description: Id of the person in the database
+                description: Id in the database
               latitude:
                 type: string
                 description: latitude
@@ -153,4 +153,138 @@ paths:
           required: true
       responses:
         200:
-          description: Successfully deleted a person
+          description: Successfully deleted
+
+  /order_plan:
+    get:
+      operationId: order_plan.read_all
+      tags:
+        - order_plan
+      responses:
+        200:
+          description: Successfully
+          schema:
+            type: array
+            items:
+              properties:
+                order_plan_id:
+                  type: string
+                  description: Id
+                paths:
+                  type: string
+                  description: paths
+
+    post:
+      operationId: order_plan.create
+      tags:
+        - order_plan
+      parameters:
+        - name: order_plan
+          in: body
+          description: Order to create
+          required: True
+          schema:
+            type: object
+            properties:
+              paths:
+                type: string
+                description: paths
+      responses:
+        201:
+          description: Successfully created
+          schema:
+            properties:
+              order_plan_id:
+                type: string
+                description: Id
+              paths:
+                type: string
+                description: paths
+  /order_plan/{order_plan_id}:
+    get:
+      operationId: order_plan.read_one
+      tags:
+        - order_plan
+      parameters:
+        - name: order_plan_id
+          in: path
+          description: Id to get
+          type: integer
+          required: True
+      responses:
+        200:
+          description: Successfully read
+          schema:
+            type: object
+            properties:
+              order_plan_id:
+                type: string
+                description: Id
+              paths:
+                type: string
+                description: paths
+
+
+    put:
+      operationId: order_plan.update
+      tags:
+        - order_plan
+      parameters:
+        - name: order_plan_id
+          in: path
+          description: Id to update
+          type: integer
+          required: True
+        - name: order
+          in: body
+          schema:
+            type: object
+            properties:
+              paths:
+                type: string
+                description: path
+      responses:
+        200:
+          description: Successfully updated
+          schema:
+            properties:
+              order_plan_id:
+                type: string
+                description: Id in the database
+              paths:
+                type: string
+                description: paths
+
+    delete:
+      operationId: order_plan.delete
+      tags:
+        - order_plan
+      parameters:
+        - name: order_plan_id
+          in: path
+          type: integer
+          description: Id
+          required: true
+      responses:
+        200:
+          description: Successfully deleted
+  /give_path/{order_plan_id}:
+    get:
+      operationId: order_plan.get_path
+      tags:
+        - order_plan
+      parameters:
+        - name: order_plan_id
+          in: path
+          description: Id to get
+          type: integer
+          required: True
+      responses:
+        200:
+          description: Successfully read
+          schema:
+            type: object
+            properties:
+              path:
+                type: array
+                description: path
